Fix language selector styling on mobile not right aligned

--- a/TheConsultancyFirm/Styles/_header.scss
+++ b/TheConsultancyFirm/Styles/_header.scss
@@ -249,6 +249,7 @@ header {
     margin: 0;
     padding: 0;
     align-self: flex-end;
+    justify-content: flex-end;
 
     li {
         padding-left: 15px;
